--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="./public/img/foto-perfil.jpeg" />
+    <link rel="icon" type="image" href="./public/img/fotoPerfil.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio - Francisco Crema</title>
   </head>
